ENH: turn off deprecated ExtractSubvolume module
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12516 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -72,7 +72,7 @@ SET(modules
   ClipModel
   Measurements
   ModelIntoLabelVolume
-  ExtractSubvolume
+# ExtractSubvolume <- replaced by ExtractSubvolumeROI
   FastMarchingSegmentation
   FourDImage
 #  FourDAnalysis
