STYLE: ExtractSubvolumeROI is now CropVolume
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12517 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -76,7 +76,8 @@ SET(modules
   FastMarchingSegmentation
   FourDImage
 #  FourDAnalysis
-  ExtractSubvolumeROI
+#  ExtractSubvolumeROI <- renamed to CropVolume
+  CropVolume
   CollectFiducials
   PETCTFusion
   IGTToolSelector
