ENH: new class to help monitor memory
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12534 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/Logic/CMakeLists.txt
+++ b/Base/Logic/CMakeLists.txt
@@ -75,6 +75,7 @@ set(SlicerBaseLogic_SRCS
   vtkPichonFastMarching.cxx
   vtkPichonFastMarchingPDF.cxx
   vtkImageRectangularSource.cxx
+  vtkSystemInformation.cxx
   )
 
 SET_SOURCE_FILES_PROPERTIES(
