ENH: start compiling the new seed widget class, used in the next gen fiducials
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12537 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/GUI/CMakeLists.txt
+++ b/Base/GUI/CMakeLists.txt
@@ -139,6 +139,7 @@ set(SlicerBaseGUI_SRCS
   vtkSlicerTransformEditorWidget.cxx
   vtkSlicerMRMLTreeWidget.cxx
   vtkSlicerViewerWidget.cxx
+  vtkSlicerSeedWidgetClass.cxx
   vtkSlicerFiducialListWidget.cxx
   vtkSlicerModelDisplayWidget.cxx
   vtkSlicerColorDisplayWidget.cxx
