STYLE: Compiles first a library with the source code and then compiles the executable from this library
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12541 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/DiffusionApplications/ResampleDTI/CMakeLists.txt
+++ b/Applications/CLI/DiffusionApplications/ResampleDTI/CMakeLists.txt
@@ -8,7 +8,11 @@ endif(GenerateCLP_FOUND)
 find_package(ITK REQUIRED)
 include(${ITK_USE_FILE})
 
-include_directories( ${CLI_SOURCE_DIR} )
+
+set (CLP ResampleDTI )
+
+set ( ${CLP}_SOURCE ${CLP}.cxx )
+generateclp(${CLP}_SOURCE ${CLP}.xml ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h)
 
 Set( dtiProcessFiles
 dtiprocessFiles/deformationfieldio.h
@@ -17,25 +21,29 @@ dtiprocessFiles/itkHFieldToDeformationFieldImageFilter.h
 dtiprocessFiles/itkHFieldToDeformationFieldImageFilter.txx
 )
 
-set (CLP ResampleDTI)
-set ( ${CLP}_SOURCE ${CLP}.cxx ${dtiProcessFiles} )
-generateclp(${CLP}_SOURCE ${CLP}.xml ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h)
-add_executable(${CLP} ${${CLP}_SOURCE})
-slicer3_set_plugins_output_path(${CLP})
-target_link_libraries (${CLP}
+add_library(${CLP}Lib SHARED ${${CLP}_SOURCE} ${dtiProcessFiles} )
+slicer3_set_plugins_output_path(${CLP}Lib)
+set_target_properties (${CLP}Lib PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint")
+target_link_libraries (${CLP}Lib
+  ModuleDescriptionParser
   ITKIO
   ITKAlgorithms 
-  ITKBasicFilters 
-  ModuleDescriptionParser
-  )
+  ITKBasicFilters
+)
+
+add_executable(${CLP} ${CLI_SOURCE_DIR}/Templates/CommandLineSharedLibraryWrapper.cxx)
+slicer3_set_plugins_output_path(${CLP})
+target_link_libraries (${CLP} ${CLP}Lib)
 
 if (Slicer3_SOURCE_DIR)
   # install each target in the production area (where it would appear in an 
   # installation) and install each target in the developer area (for running 
   # from a build)
   set(TARGETS        
-    ResampleDTI
+    ${CLP}
+    ${CLP}Lib
     )
   slicer3_install_plugins(${TARGETS})
 
 endif (Slicer3_SOURCE_DIR)
+
