--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -400,13 +400,20 @@ if(Slicer3_USE_KWWIDGETS)
   set(blt_CONFIGURE "")
   set(blt_BUILD "")
   set(blt_INSTALL "")
+  set(blt_PATCH "")
 
   if(WIN32)
   elseif(APPLE)
     set(blt_BUILD_IN_SOURCE 1)
-    set(blt_CONFIGURE sh configure --with-tcl=${tcl_build}/lib --with-tk=${tcl_build}/lib --prefix=${tcl_build})
+
+    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/blt_download_tcl84_patch.cmake.in
+      ${CMAKE_CURRENT_BINARY_DIR}/blt_download_tcl84_patch.cmake )
+
+    set(blt_PATCH patch -p2 -t -N < ${CMAKE_CURRENT_SOURCE_DIR}/../Utilities/Patches/BLT/blt_darwin_tcl84_patch.txt)
+    set(blt_CONFIGURE sh configure --with-tcl=${tcl_build}/lib --with-tk=${tcl_build}/lib --prefix=${tcl_build} --enable-shared --x-includes=/usr/X11R6/include --x-libraries=/usr/X11R6/lib --with-cflags=-fno-common)
     set(blt_BUILD make ${parallelism_level})
     set(blt_INSTAL make install)
+
   #if { ![file exists $Slicer3_LIB/tcl/isPatchedBLT] } { 
   #              puts "Patching..." 
   #              runcmd curl -k -O https://share.spl.harvard.edu/share/birn/public/software/External/Patches/bltpatch 
@@ -419,7 +426,7 @@ if(Slicer3_USE_KWWIDGETS)
   else()
     set(blt_BUILD_IN_SOURCE 1)
     set(blt_CONFIGURE sh configure --with-tcl=${tcl_build}/lib --with-tk=${tcl_build}/lib --prefix=${tcl_build})
-    set(blt_BUILD make ${parallelism_level})
+    set(blt_BUILD make)
     set(blt_INSTAL make install)
   endif()
 
@@ -428,10 +435,19 @@ if(Slicer3_USE_KWWIDGETS)
     SVN_REPOSITORY ${blt_SVN}
     SOURCE_DIR tcl/blt
     BUILD_IN_SOURCE ${blt_BUILD_IN_SOURCE}
+    PATCH_COMMAND ${blt_PATCH}
     CONFIGURE_COMMAND ${blt_CONFIGURE}
     BUILD_COMMAND ${blt_BUILD}
     INSTALL_COMMAND ${btl_INSTALL}
   )
+
+  ExternalProject_Add_Step(${proj} Download_blt_patch
+    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/blt_download_tcl84_patch.cmake
+    WORKING_DIRECTORY ${tcl_base}/blt
+    DEPENDEES update
+    DEPENDERS patch
+  )
+
 endif(Slicer3_USE_KWWIDGETS)
 
 #-----------------------------------------------------------------------------
@@ -796,7 +812,7 @@ set(proj VTK)
 if(Slicer3_USE_VTK_CVSHEAD)
   set(vtk_tag -dAP)
 else()
-  set(vtk_tag -r VTK-5-4)
+  set(vtk_tag -r VTK-5-6)
 endif()
 
 set(vtk_module VTK)
