--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -88,7 +88,7 @@ if(Slicer3_USE_OPENIGTLINK)
     ${modules}
     OpenIGTLinkIF
     NeuroNav
-#    ProstateNav
+    ProstateNav
     # IGTNavigation
     # OpenCV
     )
