ENH: SlicerQt: Add test to qCTKRangeSlider.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12615 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/Testing/CMakeLists.txt
+++ b/Libs/qCTKWidgets/Testing/CMakeLists.txt
@@ -16,6 +16,7 @@ CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   qCTKFlowLayoutTest1.cxx
   qCTKMatrixWidgetTest1.cxx
   qCTKModelTesterTest1.cxx
+  qCTKRangeSliderTest1.cxx
   qCTKPimplTest1.cxx
   qCTKSingletonTest1.cxx
   qCTKSliderSpinBoxWidgetTest1.cxx
@@ -60,6 +61,7 @@ SIMPLE_TEST( qCTKFlowLayoutTest1 )
 SIMPLE_TEST( qCTKMatrixWidgetTest1 )
 SIMPLE_TEST( qCTKModelTesterTest1 )
 SIMPLE_TEST( qCTKPimplTest1 )
+SIMPLE_TEST( qCTKRangeSliderTest1 )
 SIMPLE_TEST( qCTKSingletonTest1 )
 SIMPLE_TEST( qCTKSliderSpinBoxWidgetTest1 )
 SIMPLE_TEST( qCTKTitleComboBoxTest1 )
