COMP:  Fixed external compilation dependancy on the GenerateCLP program.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12683 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/DicomToNrrdConverter/CMakeLists.txt
+++ b/Applications/CLI/DicomToNrrdConverter/CMakeLists.txt
@@ -7,12 +7,13 @@ mark_as_advanced(CMAKE_BACKWARDS_COMPATIBILITY)
 
 
 set (CLP DicomToNrrdConverter)
-
 set ( ${CLP}_SOURCE ${CLP}.cxx)
 
 if (Slicer3_SOURCE_DIR)
   generateclp(${CLP}_SOURCE ${CLP}.xml ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h)
 else (Slicer3_SOURCE_DIR)
+  find_package(GenerateCLP NO_MODULE REQUIRED)
+  include(${GenerateCLP_USE_FILE})
   generateclp(${CLP}_SOURCE ${CLP}.xml)
 endif (Slicer3_SOURCE_DIR)
 add_executable(${CLP} ${${CLP}_SOURCE})
