BUG: Fix building tk on Unix.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12684 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -254,7 +254,7 @@ if(Slicer3_USE_KWWIDGETS)
 
   if(WIN32)
     set(tk_SOURCE_DIR tcl/tk)
-  elseif(APPLE)
+  else()
     set(tk_SOURCE_DIR tcl/tk)
     set(tk_BUILD_IN_SOURCE 1)
 
