BUG: Fix configuring tk on Unix.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12685 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/tk_configure_step.cmake.in
+++ b/SuperBuild/tk_configure_step.cmake.in
@@ -14,7 +14,7 @@ if(APPLE)
 else(APPLE)
 
   execute_process(
-    COMMAND sh configure --with-tcl=$Slicer3_LIB/tcl-build/lib --prefix=@tcl_build@ 
+    COMMAND sh configure --with-tcl=@tcl_build@/lib --prefix=@tcl_build@ 
     WORKING_DIRECTORY @tcl_base@/tk/unix
   )
 
