ENH: Added interface to plug in IBM source code
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12701 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -53,6 +53,24 @@ if (IBM_FLAG)
 MESSAGE(STATUS  "===========================================================")
 MESSAGE(STATUS  " Compiling with IBM Flag ")
 MESSAGE(STATUS  "===========================================================")
+
+include_directories(
+  ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_CURRENT_BINARY_DIR}
+  ${CMAKE_CURRENT_SOURCE_DIR}/Wizard
+  ${CMAKE_CURRENT_SOURCE_DIR}/MRML
+  ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm
+  ${CMAKE_CURRENT_SOURCE_DIR}/Registration
+  ${CMAKE_CURRENT_SOURCE_DIR}/IBM
+  ${Slicer3_Libs_INCLUDE_DIRS}
+  ${Slicer3_Base_INCLUDE_DIRS}
+  ${vtkSlicerVolumesModuleLogic_SOURCE_DIR}
+  ${vtkSlicerVolumesModuleLogic_BINARY_DIR}
+  ${Volumes_SOURCE_DIR}
+  ${Volumes_BINARY_DIR}
+  )
+
+
 file(GLOB headers
    $headers 
   "${CMAKE_CURRENT_SOURCE_DIR}/IBM/*.cxx"
@@ -125,6 +143,13 @@ set(EMSegment_SRCS
   #  ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/vtkImageEMAtlasSuperClass.cxx
   #  ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/vtkImageEMMarkov.cxx
   )
+
+if (IBM_FLAG)
+  set(EMSegment_SRCS ${EMSegment_SRCS}
+   ${CMAKE_CURRENT_SOURCE_DIR}/IBM/vtkEMSegmentInputChannelsStep.cxx
+   ${CMAKE_CURRENT_SOURCE_DIR}/IBM/vtkEMSegmentPreProcessingStep.cxx
+  )
+endif(IBM_FLAG)
 
 set_source_files_properties(
   # Algorithm sources (temporary exclusion)
