ENH: adding color LUT images to colors module
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12743 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/GUI/CMakeLists.txt
+++ b/Base/GUI/CMakeLists.txt
@@ -96,6 +96,7 @@ set(SlicerBaseGUI_SRCS
   vtkSlicerSlicesControlIcons.cxx
   vtkSlicerCheckRadioButtonIcons.cxx
   vtkSlicerSaveDataWidgetIcons.cxx
+  vtkSlicerColorLUTIcons.cxx
   vtkSlicerApplication.cxx
   vtkSlicerComponentGUI.cxx
   vtkSlicerModuleGUI.cxx
